Kubernetes/monitoring/In-Cluster/influxdb/influxdb-ing.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: influxdb
 namespace: monitoring
 annotations:
spec:
 rules:
   - host: influxdb.gcsc.lmy.corp
     http:
       paths:
         - path: /
           backend:
             serviceName: influxdb
             servicePort: 8083
   - host: influxdb-api.gcsc.lmy.corp
     http:
       paths:
         - path: /
           backend:
             serviceName: influxdb
             servicePort: 8086
